k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netsentinel
  labels:
    name: netsentinel
    app: netsentinel-system
